fix layout bugs

--- a/style.css
+++ b/style.css
@@ -898,22 +898,24 @@ input[type=submit] {
 .pricing_grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  margin-top: var(--space-xl);
-  margin-bottom: var(--space-xl);
+  gap: 10px;
   border: 1px solid rgba(255, 255, 255, 20%);
   border-radius: 24px;
+  margin-top: var(--space-xl);
+  margin-bottom: var(--space-xl);
 }
 
 .pricing_grid_item {
   text-align: center;
   /* height: 180px; */
   /* overflow: hidden; */
-  padding: var(--space-lg);
+  padding: var(--space-lg) 0;
   margin: var(--space-lg) 0;
 }
 
 .pricing_grid_item svg {
   height: 44px;
+  border: 1px solid yellow;
 }
 
 .pricing_grid_item svg path {
@@ -1039,7 +1041,7 @@ input[type=submit] {
   grid-template-columns: repeat(10, 1fr);
   /* grid-template-rows: repeat(2, 1fr); */
   grid-column-gap: 2%;
-  margin: 0 var(--space-2xl);
+  margin: 0 var(--space-md);
 }
 
 .unreleased_app {
